# server-funcs-ai

./: .gitignore  biome.json  package-lock.json  package.json
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  package.json  tsconfig.json
backend/src/: index.ts  main.rs  routes.rs  utils.rs
backend/src/db/: functions.ts
backend/src/lib/: ejecutor.ts  functions.ts
backend/src/routes/: handlers.ts
backend/src/runner/: functions.rs  mod.rs
frontend/: .env.example  astro.config.mjs  astro.config.ts  auth.config.ts  package.json  tailwind.config.mjs  tsconfig.json
frontend/public/: code.css  codejar.js
frontend/src/: env.d.ts  middleware.ts
frontend/src/components/: CodeForm.astro  Editor.astro  Example.astro  Footer.astro  FunctionCard.astro  HeadBase.astro  Header.astro  Hero.astro  LandingContent.astro  LoginButton.astro
frontend/src/components/dashboard/: ApiKeyForm.astro  Breadcrumb.tsx  Chat.astro  Chat.tsx  ChatMessage.tsx  CodeEditor.astro  CodeEditor.tsx  CodeForm.astro  CodeForm.tsx  Dashboard.tsx  Editor.astro  Editor.tsx  FunctionCard.astro  FunctionList.astro  Header.astro  NewFunctionForm.astro  SettingCard.astro  ToogleModeButton.tsx
frontend/src/components/icons/: ArrowRight.tsx  Beaker.tsx  Gear.tsx  (+8 more)
frontend/src/db/: adapter.ts  db.ts  schemas.ts
frontend/src/layouts/: Content.astro  DashboardLayout.astro  Layout.astro
frontend/src/lib/: auth.ts  chat.hook.ts  code.store.ts  const.ts  dash.hook.ts  editor.hook.ts  settings.store.ts  settings.ts  toast.ts
frontend/src/pages/: docs.astro  index.astro
scripts/: db.sql
(+19 files in other folders)
