[package]
name = "v8-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
crossbeam-channel = "0.5.13"
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["full"] }
ureq = "2.10.0"
v8 = "0.98.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
